# acta

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
acta/: __init__.py  analyzer.py  cli.py  target_layer_presets.py  visualizer.py  webui.py
acta/assets/: webui.css
examples/: build_charts.py  eval_distilbert.py  eval_gpt2.py  eval_vit.py  eval_whisper.py
tests/: conftest.py  test_analyzer.py  test_hook.py
