[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "acta"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "torch>=2.4",
    "numpy>=2.0.0",
    "matplotlib==3.10.9",
    "scipy>=1.11",
    "transformers>=4.40.0",
    "pillow",
    "requests>=2.28.0",
    "timm==1.0.26",
    "pytest",
    "pre-commit"
]

[project.scripts]
acta = "acta.cli:main"
